update sections with text and images

--- a/index.html
+++ b/index.html
@@ -4,29 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;0,900;1,400&family=Poppins:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
     <section class="header">
-        <img src="icon.png" alt="line portrait">
+        <img src="icon.png" style="width: 4%; height:4% " alt="line portrait">
         <ul class="links-push-right">
             <li><a href="https://www.linkedin.com/in/cjames8762/">LinkedIn</a></li>
-            <li><a href="https://www.facebook.com/christina.torres.129">Facebook</a>/li>
+            <li><a href="https://www.facebook.com/christina.torres.129">Facebook</a></li>
             <li><a href="https://www.instagram.com/ct11002000/">Instagram</a></li>
         </ul>
     </section>
+<!--End of Header Section--><!--End of Header Section-->
     <section class="hero">
-
-    </section>
+        <div class="left-hero">
+            <h1>My First Website</h1>
+            <p>Hey guys, this is my first coded website. (tears...) <br>I'm already 40 and coding is seriously the most <br> frustating and best skill I've ever learned. </p>
+            <a href="mailto:christinacj2678@gmail.com">
+            <button class="button">Contact Me</button></a>
+        </div>
+        <div class="left-hero"><img src="babypic.jpg" style="width: 12%; height: 12% " alt="confused expression baby picture"></div>
+    </section>    
+<!--End of Hero Section--><!--End of Hero Section-->
+    
     <section class="info">
+        <h2>Things I Love</h2>
+        <div class="cards">
+            <card>
+                <img src="beach.jpg" style="width: 10%; height:10%" alt="beach during sunset">
+                <div class="text"><p>My family and I love <br> to go to the beach.<br> I take the best naps<br> basking in the sun <br>while wearing sunscreen <br>of course.<br><a href="https://unsplash.com/photos/KMn4VEeEPR8">Photo by Sean Oulashin</a></p></div>
+            </card>
+            <card>
+                <img src="scary.jpg" style="width: 10%; height:10%" alt="scary clown face">
+                <div class="text"><p>I'm a horror fan, <br> like obsesse!<br> My favorite genre<br> are possesion movies.<br>Rosemary's Baby<br>is one of my favorites.<br><a href="https://unsplash.com/photos/oK6VHjsnHys">Photo by Robert Zunikoff</a></p></div>
+            </card>
+            <card>
+                <img src="candy.jpg" style="width: 10%; height:10%" alt="variety of bulk candy">
+                <div class="text"><p>Candy is the best! <br>It's so yummy but<br> but so bad for you.<br>Sweet and Sour Gummy Worms<br>are one of my favorites.<br><a href="https://unsplash.com/photos/xLvIcAYuuMQ">Photo by Luis Aguila</a></p></div>
+            </card>
+            <card>
+                <img src="sushi.jpg" style="width: 10%; height:10%" alt="sushi roll">
+                <div class="text"><p>Can't go wrong with<br>good sushi. We have<br> a favorite spot her<br>called Saporro. Delicious <br>and affordable!<br><a href="https://unsplash.com/photos/-1GEAA8q3wk">Photo by Vinicius Benedit</a></p></div>
+            </card>
+        </div>
+<!---End of card section--><!---End of card section-->            
 
     </section>
     <section class="quote">
-
+        <h3>Inspiring Quote</h3>
+        <p class="mom-quote">I can't believe you bought a cake for total consumption. Shame on you.</p><text>~ My Mom</text>
     </section>
+<!--end of quote section--><!--end of quote section-->
     <section class="CTA">
-
+        <div class="cta">
+            <h2>Check out my UX portfolio!</h2>
+            <h3>It's not the best but it shows I have some UI/UX knowledge. Does this mean I'm a unicorn...</h3>
+            <a href="https://myportfoliov2.addpotion.com/">
+            <button class="button-2">My Potion Portfolio</button></a>
+        </div>    
     </section>
+<!--end of CTA section--><!--end of CTA section-->
     <section class="footer">
 
     </section>
