add color border and size to button, completed footer

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!--End of Hero Section--><!--End of Hero Section-->
 
 
-    <div class="title">Things I Love</div>
+    <div class="title"><h3>Things I Love</h3></div>
     <section class="info">
         <div class="cards">
             <card>
@@ -63,18 +63,21 @@
     
     <section class="quote">
         <h3>Inspiring Quote</h3>
-        <p class="mom-quote">"I can't believe you bought a cake for total consumption. Shame on you."</p><text>~ My Mom</text>
+        <p class="mom-quote">"I can't believe you bought a cake for total consumption. Shame on you."</p><text class="mom"><br><h5>~ My Mom</h5></text>
     </section>
 <!--end of quote section--><!--end of quote section-->
 
 
     <section class="CTA">
-        <div class="cta">
-            <h2>Check out my UX portfolio!</h2>
-            <h3>It's not the best but it shows I have some UI/UX knowledge. Does this mean I'm a unicorn...</h3>
-            <a href="https://myportfoliov2.addpotion.com/">
-            <button class="button-2">My Potion Portfolio</button></a>
-        </div>    
+        <div class="rectangle">
+            <div class="cta">
+                <h3>Check out my UX portfolio!</h3>
+                <br>
+                <text>It's not the best but it shows I have some UI/UX knowledge. Does this mean I'm a unicorn...</text>
+                <a href="https://myportfoliov2.addpotion.com/">
+                <button class="button-2">Portfolio</button></a>
+            </div>
+        </div>        
     </section>
 <!--end of CTA section--><!--end of CTA section-->
 
