--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="2 style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <!--Start of Header Section--><!--Start of Header Section-->
