--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--Start of Header Section--><!--Start of Header Section-->
 <body>
     <section class="header">
-        <img src="icon.png" style="width: 6%; height:6% " class="icon" alt="line portrait">
+        <img src="images/icon.png" style="width: 6%; height:6% " class="icon" alt="line portrait">
         <ul class="header-links">
             <li><a href="https://www.linkedin.com/in/cjames8762/">LinkedIn</a></li>
             <li><a href="https://www.facebook.com/christina.torres.129">Facebook</a></li>
@@ -30,7 +30,7 @@
             <a href="mailto:christinacj2678@gmail.com">
             <button class="button">Contact Me</button></a>
         </div>
-        <div class="right-hero"><img src="babypic.jpg" class="babypic" style="width: 25%; height: 60% " alt="confused expression baby picture"></div>
+        <div class="right-hero"><img src="images/babypic.jpg" class="babypic" style="width: 25%; height: 60% " alt="confused expression baby picture"></div>
     </section>    
 <!--End of Hero Section--><!--End of Hero Section-->
 
@@ -39,19 +39,19 @@
     <section class="info">
         <div class="cards">
             <card>
-                <img src="beach.jpg" style="width: 158px; height: 117px" alt="beach during sunset">
+                <img src="images/beach.jpg" style="width: 158px; height: 117px" alt="beach during sunset">
                 <div class="text">My family and I love to go to the beach.I take the best naps basking in the sun while wearing sunscreen of course.<br><a href="https://unsplash.com/photos/KMn4VEeEPR8">Photo by Sean Oulashin</a></div>
             </card>
             <card>
-                <img src="scary.jpg" style="width: 158px; height:117px" alt="scary clown face">
+                <img src="images/scary.jpg" style="width: 158px; height:117px" alt="scary clown face">
                 <div class="text">I'm a horror fan, like obsesse! My favorite genre are possesion movies. Rosemary's Baby is my favorite movie.<br><a href="https://unsplash.com/photos/oK6VHjsnHys">Photo by Robert Zunikoff</a></div>
             </card>
             <card>
-                <img src="candy.jpg" style="width: 158px; height:117px" alt="variety of bulk candy">
+                <img src="images/candy.jpg" style="width: 158px; height:117px" alt="variety of bulk candy">
                 <div class="text">Candy is the best! It's so yummy but so bad for you. Sweet and Sour Gummy Worms are so good!<br><a href="https://unsplash.com/photos/xLvIcAYuuMQ">Photo by Luis Aguila</a></div>
             </card>
             <card>
-                <img src="sushi.jpg" style="width: 158px; height:117px" alt="sushi roll">
+                <img src="images/sushi.jpg" style="width: 158px; height:117px" alt="sushi roll">
                 <div class="text">Can't go wrong with good sushi. We have a favorite spot her called Saporro. Delicious and affordable!<br><a href="https://unsplash.com/photos/-1GEAA8q3wk">Photo by Vinicius Benedit</a></div>
             </card>
         </div>
