--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="mailto:christinacj2678@gmail.com">
             <button class="button">Contact Me</button></a>
         </div>
-        <div class="right-hero"><img src="images/babypic.jpg" class="babypic" style="width: 25%; height: 60% " alt="confused expression baby picture"></div>
+        <div class="right-hero"><img src="images/babypic.jpg" class="babypic"  alt="confused expression baby picture"></div>
     </section>    
 <!--End of Hero Section--><!--End of Hero Section-->
 
