fix spelling errors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <title>Document</title>
 </head>
 <!--Start of Header Section--><!--Start of Header Section-->
@@ -44,7 +44,7 @@
             </card>
             <card>
                 <img src="images/scary.jpg" style="width: 158px; height:117px" alt="scary clown face">
-                <div class="text">I'm a horror fan, like obsesse! My favorite genre are possesion movies. Rosemary's Baby is my favorite movie.<br><a href="https://unsplash.com/photos/oK6VHjsnHys">Photo by Robert Zunikoff</a></div>
+                <div class="text">I'm a horror fan, like obsessed! My favorite genre are possession movies. Rosemary's Baby is my favorite movie.<br><a href="https://unsplash.com/photos/oK6VHjsnHys">Photo by Robert Zunikoff</a></div>
             </card>
             <card>
                 <img src="images/candy.jpg" style="width: 158px; height:117px" alt="variety of bulk candy">
