improve alt text for icon image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--Start of Header Section--><!--Start of Header Section-->
 <body>
     <section class="header">
-        <img src="images/icon.png" style="width: 6%; height:6% " class="icon" alt="line portrait">
+        <img src="images/icon.png" style="width: 6%; height:6% " class="icon" alt="digital line portrait as icon">
         <ul class="header-links">
             <li><a href="https://www.linkedin.com/in/cjames8762/">LinkedIn</a></li>
             <li><a href="https://www.facebook.com/christina.torres.129">Facebook</a></li>
