--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="hero">
         <div class="left-hero">
             <h1>My First Website</h1>
-            <text>Hey guys, this is my first coded website. (tears...) <br>I'm already 40 and coding is seriously the most <br> frustating and best skill I've ever learned. </text>
+            <text>Hey guys, this is my first coded website. (tears...) <br>I'm already 40 and coding is seriously the most <br> frustrating and best skill I've ever learned. </text>
             <a href="mailto:christinacj2678@gmail.com">
             <button class="button">Contact Me</button></a>
         </div>
